docs/build/zh-Hans/api/5.9/mongodb/class/ObjectId.md
# publicObjectId<!-- -->

A class representation of the BSON ObjectId type.

### Hierarchy

* BSONValue
  * *ObjectId*

## Index[**](#Index)

### Constructors

* [**constructor](#constructor)

### Properties

* [**cacheHexString](#cacheHexString)

### Accessors

* [**\_bsontype](#_bsontype)
* [**id](#id)

### Methods

* [**equals](#equals)
* [**getTimestamp](#getTimestamp)
* [**inspect](#inspect)
* [**toHexString](#toHexString)
* [**toJSON](#toJSON)
* [**toString](#toString)
* [**createFromBase64](#createFromBase64)
* [**createFromHexString](#createFromHexString)
* [**createFromTime](#createFromTime)
* [**generate](#generate)
* [**isValid](#isValid)

## Constructors<!-- -->[**](#Constructors)

### [**](#constructor)constructor

* ****new ObjectId**(inputId): [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

- Overrides BSONValue.constructor

  Create an ObjectId type

  ***

  #### Parameters

  * ##### optionalinputId: string | number | Uint8Array | [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md) | ObjectIdLike

    Can be a 24 character hex string, 12 byte binary Buffer, or a number.

  #### Returns [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

## Properties<!-- -->[**](#Properties)

### [**](#cacheHexString)staticcacheHexString

**cacheHexString: boolean

## Accessors<!-- -->[**](#Accessors)

### [**](#_bsontype)\_bsontype

* **get \_bsontype(): ObjectId

- Overrides BSONValue.\_bsontype

  #### Returns ObjectId

### [**](#id)id

* **get id(): Uint8Array

- The ObjectId bytes

  ***

  #### Returns Uint8Array

## Methods<!-- -->[**](#Methods)

### [**](#equals)equals

* ****equals**(otherId): boolean

- Compares the equality of this ObjectId with `otherID`.

  ***

  #### Parameters

  * ##### otherId: string | [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md) | ObjectIdLike

    ObjectId instance to compare against.

  #### Returns boolean

### [**](#getTimestamp)getTimestamp

* ****getTimestamp**(): Date

- Returns the generation date (accurate up to the second) that this ID was generated.

  ***

  #### Returns Date

### [**](#inspect)inspect

* ****inspect**(): string

- Overrides BSONValue.inspect

  #### Returns string

### [**](#toHexString)toHexString

* ****toHexString**(): string

- Returns the ObjectId id as a 24 character hex string representation

  ***

  #### Returns string

### [**](#toJSON)toJSON

* ****toJSON**(): string

- Converts to its JSON the 24 character hex string representation.

  ***

  #### Returns string

### [**](#toString)toString

* ****toString**(encoding): string

- Converts the id into a 24 character hex string for printing, unless encoding is provided.

  ***

  #### Parameters

  * ##### optionalencoding: hex | base64

    hex or base64

  #### Returns string

### [**](#createFromBase64)staticcreateFromBase64

* ****createFromBase64**(base64): [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

- Creates an ObjectId instance from a base64 string

  ***

  #### Parameters

  * ##### base64: string

  #### Returns [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

### [**](#createFromHexString)staticcreateFromHexString

* ****createFromHexString**(hexString): [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

- Creates an ObjectId from a hex string representation of an ObjectId.

  ***

  #### Parameters

  * ##### hexString: string

    create a ObjectId from a passed in 24 character hexstring.

  #### Returns [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

### [**](#createFromTime)staticcreateFromTime

* ****createFromTime**(time): [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

- Creates an ObjectId from a second based number, with the rest of the ObjectId zeroed out. Used for comparisons or sorting the ObjectId.

  ***

  #### Parameters

  * ##### time: number

    an integer number representing a number of seconds.

  #### Returns [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md)

### [**](#generate)staticgenerate

* ****generate**(time): Uint8Array

- Generate a 12 byte id buffer used in ObjectId's

  ***

  #### Parameters

  * ##### optionaltime: number

    pass in a second based timestamp.

  #### Returns Uint8Array

### [**](#isValid)staticisValid

* ****isValid**(id): boolean

- Checks if a value is a valid bson ObjectId

  ***

  #### Parameters

  * ##### id: string | number | Uint8Array | [ObjectId](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/mongodb/class/ObjectId.md) | ObjectIdLike

    ObjectId instance to validate.

  #### Returns boolean
